--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -50,7 +50,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
 <script th:src="@{/dist/js/const.js}"></script>
 <script th:src="@{/dist/js/uep.js}"></script>
-<script th:src="@{/dist/js/eventList.js}"></script>
+<script th:src="@{/dist/js/ztryList.js}"></script>
 <script th:src="@{/dist/js/eventManage.js}"></script>
 </head>
 <!-- ADD THE CLASS layout-top-nav TO REMOVE THE SIDEBAR. -->
@@ -61,7 +61,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <nav class="navbar navbar-static-top">
       <div class="container">
         <div class="navbar-header">
-          <div class="navbar-brand"><b>宜昌分局长江未知名尸体处置及落水失踪人员信息共享平台</b></div>
+          <div class="navbar-brand"><b>宜昌分局追逃查询系统</b></div>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
             <i class="fa fa-bars"></i>
           </button>
@@ -70,7 +70,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse pull-right" id="navbar-collapse" >
           <ul class="nav navbar-nav">
-            <li data-eventType=""><a href="/list?t=0">首页</a></li>
+            <li data-eventType=""><a href="/ztry">首页</a></li>
             <li data-eventType="1"><a href="/list?t=1">未知名尸体</a></li>
             <li data-eventType="2"><a href="/list?t=2">落水失踪人员</a></li>
             <li data-eventType="3"><a href="/list?t=3">疑似落水失踪人员</a></li>
@@ -111,7 +111,6 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
         
         </div>  
         <div class="pull-right">
-            <small th:inline="text">登录单位：[[${#authorization.authentication.principal.orgName}]]</small>
             <small th:inline="text"> <a th:href="@{/user/changepwd}">修改密码</a></small>
         </div>
         <div class="clearfix"></div>
