--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -103,7 +103,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
         <li><a th:href="@{/dbjg/zx}"><i class="fa fa-circle-o text-red"></i> <span>首页</span></a></li>
         <li><a th:href="@{/ztry/list}"><i class="fa fa-circle-o text-yellow"></i> <span>追逃查询</span></a></li>
         <li><a th:href="@{/cyxx/list}"><i class="fa fa-circle-o text-aqua"></i> <span>信息查询</span></a></li>
-        <li><a th:href="@{/dbjg/list}"><i class="fa fa-circle-o text-aqua"></i> <span>对比结果</span></a></li>
+        <li><a th:href="@{/dbjg-list}"><i class="fa fa-circle-o text-aqua"></i> <span>对比结果</span></a></li>
         <li><a th:href="@{/import-ztry}"><i class="fa fa-circle-o text-aqua"></i> <span>追逃库导入</span></a></li>
       </ul>
     </section>
