船员库导入

--- a/src/main/resources/templates/dbjg-list.html
+++ b/src/main/resources/templates/dbjg-list.html
@@ -3,7 +3,7 @@
 <head th:replace="layout::head">
 </head>
 <!-- ADD THE CLASS layout-top-nav TO REMOVE THE SIDEBAR. -->
-<body class="hold-transition skin-blue  theme2  sidebar-mini">
+<body class="skin-blue  theme2  sidebar-mini">
 	<div class="wrapper">
 
 		<header th:replace="layout::mainHeader"> </header>
