--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -3,7 +3,7 @@
 <head th:replace="layout::head">
 </head>
 <!-- ADD THE CLASS layout-top-nav TO REMOVE THE SIDEBAR. -->
-<body class="hold-transition skin-blue layout-top-nav theme2">
+<body class="skin-blue layout-top-nav theme2">
 <script type="text/javascript" th:src=@{/dist/js/eventView.js}></script>
 
 <script th:src="@{/bower_components/viewerjs/dist/viewer.js}"></script><!-- Viewer.js is required -->
