--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -3,7 +3,7 @@
 <head th:replace="layout::head">
 </head>
 <!-- ADD THE CLASS layout-top-nav TO REMOVE THE SIDEBAR. -->
-<body class="hold-transition skin-blue layout-top-nav theme2">
+<body class="skin-blue layout-top-nav theme2">
 
 <script th:src="@{/bower_components/jquery-validation/dist/jquery.validate.min.js}"></script>
 <script th:src="@{/dist/js/eventEdit.js}"></script>
