--- a/src/main/resources/templates/import-crew.html
+++ b/src/main/resources/templates/import-crew.html
@@ -5,7 +5,7 @@
 <head th:replace="layout::head">
 </head>
 <!-- ADD THE CLASS layout-top-nav TO REMOVE THE SIDEBAR. -->
-<body class="hold-transition skin-blue  theme2  sidebar-mini">
+<body class="skin-blue  theme2 ">
 	<div class="wrapper">
 
 		<header th:replace="layout::mainHeader"> </header>
@@ -18,12 +18,28 @@
 			<!-- Main content -->
 			<section class="content">
 				<div class="box box-info">
-					<div class="box-header with-border">船员数据库导入</div>
+					<div class="box-header with-border"><h5>船员数据库导入</h5></div>
 					<!-- /.box-header -->
 
 					<form id="eventEditForm" class="form" th:action="@{/import-crew}"
 						method="POST" enctype="multipart/form-data">
 						<div class="box-body">
+						
+							<div th:if="${successCount != null && successCount > 0}"
+								class="alert alert-info alert-dismissible">
+								<button type="button" class="close" data-dismiss="alert"
+									aria-hidden="true">×</button>
+								<h4>
+									<i class="icon fa fa-check"></i> 成功导入 <span th:text="${successCount}">0</span> 行。
+								</h4>
+							</div><div th:if="${successCount != null && successCount == 0}"
+								class="alert alert-warning alert-dismissible">
+								<button type="button" class="close" data-dismiss="alert"
+									aria-hidden="true">×</button>
+								<h4>
+									<i class="icon fa fa-info"></i> 未导入任何数据。请确认文件内容。
+								</h4>
+							</div>
 							<div th:if="${faildList != null && faildList.size() > 0}"
 								class="alert alert-warning alert-dismissible">
 								<button type="button" class="close" data-dismiss="alert"
@@ -45,15 +61,37 @@
 									</div>
 								</div>
 							</div>
+							<div class="row">
+								<div class="col-md-12">
+								<p>船员数据导入注意事项：</p>
+								<ol>
+									<li>Excel (Excel 97- 2004 工作簿.xls)</p>
+									<li>表格需要包含以下表头行：<br/>
+									SHIP_CREW_ID | CREW_ID | ID_CARD | CREWNAME | SHIP_ID | ONSHIP_DUTY | CREW_STATUS | START_DATE | END_DATE | REMARK | OPERUSER | OPERTIME
+									</li>
+									<li>系统只会导入表头行之后的数据。</li>
+									<li>当数据量较大时（如走过一万条记录），导入可能需要一段时间，请耐心等待。</li>
+								</ol>
+								</div>
+							</div>
 
 						</div>
 						<div class="box-footer clearfix">
 							<div class="row">
-								<input type="submit" value="导入"
+								<input type="submit" value="导入" id="btn-imoprt-crew"
 									class="btn btn-primary col-md-2 col-md-offset-2" />
+								
+				              <div class="progress active col-md-4 col-md-offset-2 no-padding hidden  uep-busy-indicator">
+				                <div class="progress-bar progress-bar-primary progress-bar-striped" role="progressbar" style="width: 100%">
+				                  <span>正在导入</span>
+				                </div>
+				              </div>
 							</div>
 						</div>
 					</form>
+				<div class="overlay hidden uep-busy-indicator">
+	              <i class="fa fa-refresh fa-spin"></i>
+	            </div>
 				</div>
 				<!-- /.box -->
 			</section>
@@ -64,7 +102,7 @@
 		<footer class="main-footer" th:replace="layout::footer"> </footer>
 	</div>
 	<!-- ./wrapper -->
-	<script type="text/javascript">
+	<script type="text/javascript" th:src="@{/dist/js/importCrew.js}">
 		
 	</script>
 
