--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,7 +31,7 @@
 <!-- Google Font -->
 <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic"> -->
 </head>
-<body class="hold-transition theme2 login-page">
+<body class="theme2 login-page">
 	<div class="login-box">
 		<div class="login-logo">
 					<p class="login-box-title">宜昌分局长江未知名尸体处置及落水失踪人员信息共享平台</p>
